objects/Launch_Promotions_Projects__c.object
<CustomObject>
    <description>This object is used in conjunction with the Launch object.  IFS personnel enter promotion/project names into this object then associate those promotions with launches to identify special projects and promotions.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Please enter the end date of the promotion or project.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Please enter the start date of the promotion or project.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( 
 Start_Date__c &gt; Today(), &quot;Not Started&quot;,
IF(
OR(
And(
 Start_Date__c &lt;= Today(), 
 End_Date__c &gt;= Today()
), ISBLANK(End_Date__c)
), &quot;Active&quot;, 
&quot;Inactive&quot;
))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>NOW() -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Launch Promotions/Projects</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Promotion/Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Launch Promotions/Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CB_PromoProjName_CantChangeAfter5</fullName>
        <active>true</active>
        <errorConditionFormula>And(
Ischanged( Name ),
NOW() -  CreatedDate &gt; 5,
 $Profile.Name &lt;&gt; &quot;Cobalt Service Ops Admin&quot;,
NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c))
)</errorConditionFormula>
        <errorMessage>You may not change the promotion name 5 days after the promotion/project record was created.  Please contact Service Ops if the change is still necessary or create a new record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CB_StartDateNotGreaterThanEndDate</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
        <errorMessage>The start date must be less than the end date.</errorMessage>
    </validationRules>
</CustomObject>